{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 27,
  "lineage": "09b7a884-095e-14ca-c734-26982baa1a64",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009db431541c2c548",
            "arn": "arn:aws:ec2:us-east-1:785434010839:elastic-ip/eipalloc-009db431541c2c548",
            "domain": "vpc",
            "id": "eipalloc-009db431541c2c548",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-211-110-110.compute-1.amazonaws.com",
            "public_ip": "54.211.110.110",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785434010839:internet-gateway/igw-058deaf00515c5f57",
            "id": "igw-058deaf00515c5f57",
            "owner_id": "785434010839",
            "region": "us-east-1",
            "tags": {
              "Name": "lesson-5-vpc-igw"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-igw"
            },
            "vpc_id": "vpc-028a822e76a2594f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009db431541c2c548",
            "association_id": "eipassoc-01339081c09a16978",
            "connectivity_type": "public",
            "id": "nat-0d3b33c5b60891f15",
            "network_interface_id": "eni-08bf80263bdc633ab",
            "private_ip": "10.0.1.176",
            "public_ip": "54.211.110.110",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c91fb82d50ac0dbb",
            "tags": {
              "Name": "lesson-5-vpc-nat"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785434010839:route-table/rtb-099615f0f1b39560f",
            "id": "rtb-099615f0f1b39560f",
            "owner_id": "785434010839",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d3b33c5b60891f15",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-5-vpc-private-rt"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-028a822e76a2594f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "785434010839",
            "id": "rtb-099615f0f1b39560f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785434010839:route-table/rtb-09b60bb96ca060751",
            "id": "rtb-09b60bb96ca060751",
            "owner_id": "785434010839",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-058deaf00515c5f57",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-5-vpc-public-rt"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-028a822e76a2594f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "785434010839",
            "id": "rtb-09b60bb96ca060751",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2c2128c5aa4e282",
            "region": "us-east-1",
            "route_table_id": "rtb-099615f0f1b39560f",
            "subnet_id": "subnet-0c2c1ab285129556e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0300bf7f8d0d09bdd",
            "region": "us-east-1",
            "route_table_id": "rtb-099615f0f1b39560f",
            "subnet_id": "subnet-0e933419beff7df42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f13bfc0f2c5f4261",
            "region": "us-east-1",
            "route_table_id": "rtb-099615f0f1b39560f",
            "subnet_id": "subnet-007de4174d671361e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fff6f59f0d76e82",
            "region": "us-east-1",
            "route_table_id": "rtb-09b60bb96ca060751",
            "subnet_id": "subnet-0c91fb82d50ac0dbb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1b3bde22d832b69",
            "region": "us-east-1",
            "route_table_id": "rtb-09b60bb96ca060751",
            "subnet_id": "subnet-03171ea4b42682053"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d413a0f8356be9d",
            "region": "us-east-1",
            "route_table_id": "rtb-09b60bb96ca060751",
            "subnet_id": "subnet-02884eb913266035c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785434010839:subnet/subnet-0c2c1ab285129556e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2c1ab285129556e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "785434010839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "lesson-5-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-028a822e76a2594f7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "785434010839",
            "id": "subnet-0c2c1ab285129556e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785434010839:subnet/subnet-0e933419beff7df42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e933419beff7df42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "785434010839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "lesson-5-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-028a822e76a2594f7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "785434010839",
            "id": "subnet-0e933419beff7df42",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785434010839:subnet/subnet-007de4174d671361e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007de4174d671361e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "785434010839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "lesson-5-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-us-east-1c"
            },
            "vpc_id": "vpc-028a822e76a2594f7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "785434010839",
            "id": "subnet-007de4174d671361e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785434010839:subnet/subnet-0c91fb82d50ac0dbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c91fb82d50ac0dbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "785434010839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "lesson-5-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-028a822e76a2594f7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "785434010839",
            "id": "subnet-0c91fb82d50ac0dbb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785434010839:subnet/subnet-03171ea4b42682053",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03171ea4b42682053",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "785434010839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "lesson-5-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-028a822e76a2594f7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "785434010839",
            "id": "subnet-03171ea4b42682053",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785434010839:subnet/subnet-02884eb913266035c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02884eb913266035c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "785434010839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "lesson-5-vpc-public-us-east-1c"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-us-east-1c"
            },
            "vpc_id": "vpc-028a822e76a2594f7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "785434010839",
            "id": "subnet-02884eb913266035c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785434010839:vpc/vpc-028a822e76a2594f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0302ecc3743504b3d",
            "default_route_table_id": "rtb-0c437f69282afd3b9",
            "default_security_group_id": "sg-07d6898150dabe68f",
            "dhcp_options_id": "dopt-0cb25bfa56aa396d4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-028a822e76a2594f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c437f69282afd3b9",
            "owner_id": "785434010839",
            "region": "us-east-1",
            "tags": {
              "Name": "lesson-5-vpc"
            },
            "tags_all": {
              "Name": "lesson-5-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}